--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.5.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
