--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/app.ts",
+    "start": "node dist/app.js"
   },
   "author": "Tanmay Sarkar",
   "license": "ISC",
@@ -29,5 +30,8 @@
     "@types/node": "^22.5.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "engines": {
+    "node": "20.x"
   }
 }
