--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,7 @@ jobs:
       # Install dependencies and build your project
       - name: Install dependencies
         run: |
+          cd backend
           npm install
           npm run build
 
